# rust-wasm

./: .gitignore  Cargo.toml  README.md  index.html  words.json
src/: lib.rs  model.rs
