[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
once_cell = "1.17"
js-sys = "0.3"
# yew = "0.21.0"
# indexmap = "2.6.0"
# implicit-clone = "0.5.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'KeyboardEvent',
  'console',
]
